# HeTaoSSH

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  README_zh.md  RELEASE_GUIDE.md  latest.json  package.json  pnpm-lock.yaml  release_notes.md  temp_check.key  temp_check.key.pub  temp_check.key.pub.sig  审查报告.md
.github/workflows/: release.yml
.sisyphus/drafts/: implementation-plan-revised.md  implementation-plan.md  integration-test-report.md  quick-reference.md  security-performance-status.md
docs/: API.md  PRD.md  USER_GUIDE.md
scripts/: build_local.ps1  build_with_signing.js  generate_updater_json.js  merge_latest_json.js  release.js  release_pipeline.ps1  test_assets.js
src-tauri/: Cargo.toml  check_output.txt  output.txt  output_utf8.txt  tauri.conf.json
src-tauri/HetaoSSH/: hetaossh.db
src-tauri/assets/themes/: dracula.json  gruvbox-dark.json  nord.json  solarized-dark.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  lib.rs  local_term.rs  main.rs  monitor.rs  snippets.rs  theme.rs  window_state.rs
src-tauri/src/commands/: config.rs  mod.rs  sftp.rs  ssh.rs  system.rs  tunnel.rs
src-tauri/src/config/: mod.rs
src-tauri/src/crypto/: mod.rs
src-tauri/src/security/: mod.rs  path_validation.rs  validation.rs
src-tauri/src/ssh/: connection.rs  handler.rs  manager.rs  mod.rs  sftp.rs  tunnel.rs
web/: .eslintrc.cjs  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts  vitest.config.ts
(+62 files in other folders)
