[package]
name = "HeTaoSSH"
version = "0.1.0"
description = "A modern, lightweight SSH client for developers"
authors = ["HeTaoSSH Team"]
edition = "2021"

[lib]
name = "he_tao_ssh_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"

# SSH
russh = "0.50.0-beta.7"
russh-keys = "0.50.0-beta.7"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Encryption
aes-gcm = "0.10"
zeroize = "1"
rand = "0.8"
base64 = "0.22"

# Logging
log = "0.4"
env_logger = "0.11"

# Async traits
async-trait = "0.1"

# Directories
dirs = "6"
keyring = { version = "3.6.3", features = ["windows-native"] }
russh-sftp = "2.0.0-beta.2"
plist = "1.8.0"
reqwest = { version = "0.13.2", features = ["json"] }
portable-pty = "0.9.0"
tauri-plugin-updater = "2.10.0"
tauri-plugin-process = "2.3.1"
tauri-plugin-clipboard-manager = "2.3.2"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
